// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $10.00
    .
  </h1>
</div>
`;

exports[`should match snapshot for 3 expense 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $100.09
    .
  </h1>
</div>
`;

exports[`should match snapshot for no expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
    .
  </h1>
</div>
`;
